Revert "Removing "-webkit-overflow-scrolling: touch;" from .modal.custom-modal on old_bootstrap.css to fix menu scroll"
This reverts commit e19e4b789e1283220322f123916e9c22871ad24f.

--- a/css/old_bootstrap.css
+++ b/css/old_bootstrap.css
@@ -1,4 +1,4 @@
-webkit-overflow/* Original bootstrap code used on BR 2017 Rails site. */
+/* Original bootstrap code used on BR 2017 Rails site. */
 
 @font-face {
     font-family: 'Glyphfas Halflings' !important;
@@ -6634,7 +6634,7 @@ button.close {
     bottom: 0;
     left: 0;
     z-index: 1040;
-/*    -webkit-overflow-scrolling: touch; */
+    -webkit-overflow-scrolling: touch;
     outline: 0
 }
 
